Fixed PinkBike full-screening
Next up: get rid of the black bars. Maybe something like the color-reactive ones Youtube had a while back? Or just a simple toggleable cropped mode?

--- a/PerpetualShred/wwwroot/css/ReactPlayerTest.css
+++ b/PerpetualShred/wwwroot/css/ReactPlayerTest.css
@@ -5,6 +5,17 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
+    background-color: black;
+}
+
+.video-background div {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background-color: black;
 }
 
 body {
